# utah-haskell

./: .gitignore  LICENSE  Makefile  README.org  stack.yaml  utah-haskell.cabal
2015-09-17-REST-client-wreq-aeson-foldr/exercise/: Client.hs  README.org
2015-09-17-REST-client-wreq-aeson-foldr/solution/: Makefile  README.org  solution.cabal  stack.yaml
2015-09-17-REST-client-wreq-aeson-foldr/solution/src/: Client.hs
2015-09-17-REST-client-wreq-aeson-foldr/solution/src/Service/: DisplayEndpoint.hs  Interact.hs  UserEndpoint.hs
2015-09-17-solution/: Client.hs  Msg.hs  README.org  solution.cabal
2015-09-17-template/: Client.hs  Msg.hs  README.org  template.cabal
app/: Main.hs
future/: utah-haskell.cabal
infrastructure/: Makefile  README.org  stack.yaml  utah-haskell.cabal
infrastructure/app/: Main.hs
infrastructure/src/: Client.hs  DataTypes.hs
infrastructure/src/Service/: Display.hs  DisplayEndpoint.hs  Interact.hs  UserEndpoint.hs
src/: Client.hs  DataTypes.hs  LibDataTypes.hs  LibInteract.hs  LibScotty.hs  LibThreepenny.hs
src/Service/: Interact.hs  Scotty.hs  Threepenny.hs  UserEndpoint.hs
