name:                utah-haskell
version:             0.1.0.0
synopsis:            Infrastructure for Utah Haskell (https://groups.google.com/forum/#!forum/utah-haskell)
description:         Please see README.org
homepage:            https://github.com/haroldcarr/utah-haskell
license:             Apache
license-file:        LICENSE
author:              Harold Carr
maintainer:          harold.carr@gmail.com
copyright:           2015 Harold Carr
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LibDataTypes
                     , LibInteract
                     , LibScotty
                     , LibThreepenny
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.8.0.2
                     , containers >= 0.5.5.1
                     , http-types == 0.8.6
                     , network == 2.6.2.1
                     , scotty == 0.9.1
                     , string-conversions == 0.3.0.3
                     , text == 1.2.0.6
                     , threepenny-gui == 0.6.0.3
                     , transformers == 0.3.0.0
  default-language:    Haskell2010

executable utah-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , threepenny-gui == 0.6.0.3
                     , utah-haskell
  default-language:    Haskell2010

test-suite utah-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , utah-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haroldcarr/utah-haskell
