name:                solution
version:             0.1.0.0
synopsis:            Initial project template from stack
-- description:         Please see README.md
homepage:            http://github.com/githubuser/foo#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Client
                     , Msg
  build-depends:       aeson
                     , base
                     , containers
                     , lens
                     , lens-aeson
                     , network
                     , wreq
  default-language:    Haskell2010
