name:                solution
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         See README.md
homepage:            http://github.com/githubuser/foo#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Harold Carr
maintainer:          harold.carr@gmail.com
copyright:           2015 Harold Carr
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client
                     , Service.DisplayEndpoint
                     , Service.Interact
                     , Service.UserEndpoint
  build-depends:       aeson
                     , base
                     , containers
                     , http-types
                     , lens
                     , lens-aeson
                     , network
                     , scotty
                     , string-conversions
                     , text
                     , threepenny-gui
                     , transformers
                     , wreq
  default-language:    Haskell2010

executable utah-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , threepenny-gui == 0.6.0.3
                     , solution
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haroldcarr/utah-haskell
